--- a/pages/blog/post-2/index.mdx
+++ b/pages/blog/post-2/index.mdx
@@ -1,11 +1,9 @@
 import BlogPost from '../../../components/BlogPost';
-import { LiveProvider, LiveEditor, LiveError, LivePreview } from 'react-live';
+import Button from '../../../components/Button';
 
 export const meta = {
   title: 'Introduction to Next.js',
   description: 'Getting started with the Next framework',
-  date: 'Aug 04, 2020',
-  readTime: 2,
 };
 
 export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
@@ -15,5 +13,11 @@ export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque maximus pellentesque dolor non egestas. In sed tristique elit. Cras vehicula, nisl vel ultricies gravida, augue nibh laoreet arcu, et tincidunt augue dui non elit. Vestibulum semper posuere magna, quis molestie mauris faucibus ut.
 
 ```js live=true
+<Button>hello</Button>
+```
+
+```js
 <div>foo</div>
 ```
+
+<Button>hello</Button>
