--- a/pages/blog/post-2/index.mdx
+++ b/pages/blog/post-2/index.mdx
@@ -11,7 +11,7 @@ export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
 This is an example of editing live code using `react-live` within an mdx file. Syntax highlighting provided by `prism-react-renderer`.
 
 ```js live=true
-<Button>hello</Button>
+<Button>Edit my code</Button>
 ```
 
 An example of code in a standard Markdown code block.
@@ -22,4 +22,4 @@ var foo = 'bar';
 
 An example of our React `Button` component.
 
-<Button>hello</Button>
+<Button>I’m a button</Button>
