--- a/pages/post/post-1/index.mdx
+++ b/pages/post/post-1/index.mdx
@@ -2,7 +2,7 @@ import BlogPost from '../../../components/BlogPost';
 import Button from '../../../components/Button';
 
 export const meta = {
-  title: 'Tag',
+  title: 'Button',
   description: 'Clickable elements used to perform actions',
 };
 
@@ -17,7 +17,7 @@ This is an example of editing live code using `react-live` within an mdx file. S
 An example of code in a standard Markdown code block.
 
 ```js
-var foo = 'bar';
+const foo = 'bar';
 ```
 
 An example of our React `Button` component.
