--- a/pages/post/post-2/index.mdx
+++ b/pages/post/post-2/index.mdx
@@ -1,9 +1,9 @@
 import BlogPost from '../../../components/BlogPost';
-import Button from '../../../components/Button';
+import Tag from '../../../components/Tag';
 
 export const meta = {
-  title: 'Button',
-  description: 'Clickable elements used to perform actions',
+  title: 'Tag',
+  description: 'Categorization of a thing',
 };
 
 export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
@@ -11,15 +11,15 @@ export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
 This is an example of editing live code using `react-live` within an mdx file. Syntax highlighting provided by `prism-react-renderer`.
 
 ```js live=true
-<Button>Edit my code</Button>
+<Tag>Edit me</Tag>
 ```
 
 An example of code in a standard Markdown code block.
 
 ```js
-var foo = 'bar';
+const foo = 'bar';
 ```
 
-An example of our React `Button` component.
+An example of our React `Tag` component.
 
-<Button>I’m a button</Button>
+<Tag>I’m a tag</Tag>
