--- a/pages/post/post-1/index.mdx
+++ b/pages/post/post-1/index.mdx
@@ -11,7 +11,7 @@ export default ({ children }) => <BlogPost meta={meta}>{children}</BlogPost>;
 This is an example of editing live code using `react-live` within an mdx file. Syntax highlighting provided by `prism-react-renderer`.
 
 ```js live=true
-<Button>Edit my code</Button>
+<Button theme='foo'>Edit my code</Button>
 ```
 
 An example of code in a standard Markdown code block.
